Fixed spacing of header issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,9 +51,9 @@ a {
 .header-big {
     font-family: Monaco, Consolas, monospace;
     width: 355px;
-    margin: 25vh 15%;
+    margin: 30vh 15%;
     height: 40vh;
-    min-height: 520px;
+    min-height: 205px;
     overflow: hidden;
     user-select: none;
 }
@@ -259,7 +259,7 @@ a {
 
 @media (min-width: 1050px) {
     .header-big {
-        margin: 25vh 15%;
+        margin: 30vh 15%;
         width: inherit;
     }
 
